--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,26 +1,33 @@
 * {
-  font-size: 20px;
+  font-size: large;
+}
+
+html {
+  height: 100%;
 }
 
 a {
   text-decoration: none;
-  color: #2C2E3A;
+  color: #2A093E;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  flex: auto;
+  height: 100%;
   margin: 0;
 }
 
-.navbar {
+header {
   display: flex;
   flex-direction: row;
-  height: 2em;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #2C2E3A;
+  background-color: #2A093E;
 }
 
-.navbar > a {
+header > a {
   display: block;
   height: 100%;
   text-align: center;
@@ -29,27 +36,26 @@ body {
   color: white;
 }
 
-
 main {
+  display: grid;
+  grid-template-rows: 1fr 2fr;
   padding: 0.5ex 1em;
-  margin: 0 0 2em 0;
-  background-color: color-mix(in oklab, lavender 50%, white);
+  background-color: #F4E9FC;
 }
 
 .bio {
-  display: flex;
-  flex: 1 4;
-  margin: 1em;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   gap: 1em;
-  height: 30%;
-  justify-items: center;
+  justify-items: left;
 }
 
 .bio > .left-side > img {
   width: 70%;
-  border-radius: 50%;
+  border-radius: 15%;
   border: 2px solid black;
-  margin-left: 20%;
+  margin: 0% 20%;
 }
 
 .gallery {
@@ -62,20 +68,11 @@ main {
 
 .gallery-item {
   text-align: center;
-  width: 20%;
+  width: 15%;
   aspect-ratio: 0.9;
   padding: 0;
   margin: 0;
-  border: 2px solid #2C2E3A;
-}
-
-#math-adventures .gallery-item {
-  aspect-ratio: 1;
-}
-
-.gallery-item img {
-  width: 100%;
-  aspect-ratio: 1;
+  border: 2px solid  #2A093E;
 }
 
 .gallery-item  p {
@@ -86,55 +83,42 @@ main {
   padding: 0;
   height: 3.5em;
   color: white;
-  background-color: #2C2E3A;
-}
-
-#math-adventures .gallery-item p {
-  height: 100%;
-}
-
-.gallery-item:hover {
-  border: 2px solid gray;
+  background-color:  #2A093E;
 }
 
 .gallery-item:hover  p {
-  color: black;
-  background-color: white;
+  color: #2A093E;
+  background-color: #E1C1F6; 
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
+footer {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: start; 
   height: 1.5em;
   width: 100%;
-  margin: 0;
-  background-color: #2C2E3A;
+  background-color:  #2A093E;
 }
 
-.footer a {
-  color: white;
+footer a {
+  color:  white;
 }
 
 /*  ====  Mobile Resposive  ===  */
 @media only screen and (max-width: 600px) {
-* {
-  font-size: 20px;
-}
-.bio > .left-side {
-  display: none;
-}
-.bio > .rigth-side {
-  width: 100%;
-}
-.gallery {
-  flex-direction: column;
-}
-.gallery-item {
-  width: 100%;
-}
+  .bio {
+    display: flex;
+    flex-direction: column;
+  }
+  .bio > .left-side {
+    display: none;
+  }
+  .gallery {
+    flex-direction: column;
+  }
+  .gallery-item {
+    width: 100%;
+  }
 }
 
