--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
     </p>
 
     <a href="https://drive.google.com/file/d/10nWom6Qi-nwcRIwvOqSJwpJYhYQRe0hR/view?usp=sharing">
-      <strong> <font color = #450F67> Sesión 1: </font> </strong> Introducción y organización
+      <strong> <font color = #450F67> Sesión 1: </font> </strong> Introducción y organización (Ver notas)
     </a>
   </div>
 </section>
