Tabla seminario Riemanniana

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,18 @@
   </div>
   <div class="right-side">
     <p>
-      Soy estudiante de magíster del Departamento de Matemáticas de la Universidad de Chile. Actualmente estor trabajando con la Dra. <strong> Anita Rojas </strong> en <strong> Geometría de Superficies de Riemann </strong>.
-    <p>
+      Soy estudiante de magíster del Departamento de Matemáticas de la Universidad de Chile. Actualmente estoy trabajando con la Dra.
+      <a href="https://sites.google.com/uchile.cl/anirojas/en"> Anita Rojas </a> en <strong> Geometría de Superficies de Riemann </strong>.
 
-      </p>
-      Mi tesis se centra en establecer un algoritmo para encontrar <strong> sístoles </strong> en superficies de género 2 y 3 a partir de la acción de un grupo (abstracto).
+      La meta de mi tesis es describir un algoritmo para encontrar <strong> sístoles </strong> en superficies de género 2 y 3 a partir de la acción de un grupo (abstracto).
     </p>
 
     <p> 
-      I am a master student in Departamento de Matemáticas at Universidad de Chile, I am working with professor <strong> Anita Rojas</strong> on <strong> Geometry of Riemann surfaces </strong>. 
+      I am a master student in Departamento de Matemáticas at Universidad de Chile, I am working with professor 
+      <font color = #2A093E> Anita Rojas </font> in <strong> Geometry of Riemann surfaces </strong>. 
 
-      Particularly, I am focused on algorithms to find <strong>systoles</strong> of surfaces of genus 2 and 3, in order to describe those surfaces with the longest systoles and biggest kissing number. 
+      In my thesis I am trying to find those surfaces of genus 2 and 3 with the longest <strong>systoles</strong> and biggest kissing number. 
+      Particularly, I am focused on to describe algorithms to determine systoles starting with an action of an abstract group.
     </p>
   </div>
 </section>
@@ -42,9 +43,6 @@
 </div>
 </section-->
 
-<!--section id="Presentations">
-
-</section-->
 
 <!--section id = "Funny fails">
   <h2>Funny fails</h2>
@@ -67,17 +65,32 @@
 
 <section id ="seminarios">
   <div id="riemanniana-2025">
-    <h1>Seminario de Geometría Riemanniana 2025</h1>
+    <h1> <font color= #2A093E> Seminario de Geometría Riemanniana 2025</font> </h1>
     <p>
-      Este semestre estoy organizando junto al profesor <strong> Pedro Gaspar </strong> un seminario de lectura en Geometría Riemanniana. La idea es cubrir las nociones clásicas: métricas Riemannianas, conexiones, geodésicas y curvaturas. 
+      Este semestre estoy organizando junto al profesor <a href="https://sites.google.com/view/pedrogaspar"> Pedro Gaspar</a> 
+      un seminario de lectura en Geometría Riemanniana. El objetivo es cubrir las nociones clásicas: métricas Riemannianas, conexiones, geodésicas y curvaturas. 
     </p>
     <p>
       Nos reuniremos los <strong> jueves a las 12:20 hrs en sala ? </strong> de la Facultad de Matemáticas, Pontificia Universidad Católica.
     </p>
 
-    <a href="https://drive.google.com/file/d/10nWom6Qi-nwcRIwvOqSJwpJYhYQRe0hR/view?usp=sharing">
-      <strong> <font color = #450F67> Sesión 1: </font> </strong> Introducción y organización (Ver notas)
-    </a>
+    <table>
+      <thead>
+         <tr>
+          <th scope="col"> Fecha </th>
+          <th scope="col"> Expositor/a </th>
+          <th scope="col"> Notas </th>
+      </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> 7 de agosto </td>
+          <td> Camila Guajardo Vásquez </td>
+          <td> <a href="https://drive.google.com/file/d/10nWom6Qi-nwcRIwvOqSJwpJYhYQRe0hR/view?usp=sharing"> Introducción y organización </a> </td>
+        </tr>
+      </tbody>
+    </table>
+
   </div>
 </section>
 
