--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,8 +7,19 @@ html {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: underline;
   color: #2A093E;
+}
+
+table {
+  border: 2px solid black;
+  width: 80%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid black;
+  text-align: center;
 }
 
 body {
@@ -34,6 +45,7 @@ header > a {
   margin: 0;
   padding: 0;
   color: white;
+  text-decoration: none;
 }
 
 main {
@@ -47,7 +59,6 @@ main {
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  gap: 1em;
   justify-items: left;
 }
 
@@ -55,7 +66,11 @@ main {
   width: 70%;
   border-radius: 15%;
   border: 2px solid black;
-  margin: 0% 20%;
+  margin: 0% 10%;
+}
+
+.bio > .right-side {
+  margin: 3% 0%;
 }
 
 .gallery {
@@ -103,6 +118,7 @@ footer {
 
 footer a {
   color:  white;
+  text-decoration: none;
 }
 
 /*  ====  Mobile Resposive  ===  */
